tg_parser/tests/invalid/bad_port_array_empty_size.tg
circuit BadPort(in a[]; out y) {
}
